# dq

./: .gitignore  db.example.ini  dbc.example.ini  dbc.py  dbcq.py  dq.ct  dq.py  dqcli.py  makefile  pyproject.toml  qp.ct  qp.py  qpcli.py  readme.md  tbl.py  tblhelp.py  test.py
dq/: __init__.py  __main__.py  dq.ct  main.ct
example/: create.sql  insert.sql  makefile  music.db  musicdb.ct  musicdb.sh
